--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <span class="badge-tooltip">Expert Web3.0</span>
                 </div>
                 <div class="badge-container">
-                    <img src="./assets/discord-cert.svg" alt="Certification Discord" class="badge">
+                    <img src="./assets/Fichier_Discord_Logo_sans_texte.svg" alt="Certification Discord" class="badge">
                     <span class="badge-tooltip">Discord Expert</span>
                 </div>
                 <div class="badge-container">
